fix: table whitespace nowrap

--- a/src/components/shared/Response/response.scss
+++ b/src/components/shared/Response/response.scss
@@ -183,6 +183,7 @@
   font-size: 14px;
   overflow-x: auto;
   display: block;
+  white-space: nowrap;
 }
 
 .markdown table thead {
